modify and add models, routes, add blockchain services: listening to events, websocket for handling liquidation

--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
     "ethers": "^6.15.0",
     "express": "^5.1.0",
     "nodemon": "^3.1.11",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "pg": "^8.16.3"
