--- a/frontend/lending-pool/package.json
+++ b/frontend/lending-pool/package.json
@@ -12,10 +12,12 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
+    "axios": "^1.13.2",
     "ethers": "^6.15.0",
     "next": "16.0.1",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "babel-plugin-react-compiler": "1.0.0"
